--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,45 @@ body{
     margin-top: 20px; /* Espacio entre el header y restaurantemadre */
 }
 
+  /* Overlay general: cubre toda la pantalla con un fondo negro semitransparente */
+  #flyer-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6); /* Fondo negro con 60% de opacidad */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Asegura que esté por encima de todo */
+  }
+
+  /* Contenedor del flyer: ocupa un porcentaje de la pantalla y se posiciona en el centro */
+  .flyer-content {
+    position: relative;
+    width: 20%;       /* Ajusta este porcentaje según el tamaño deseado */
+    max-width: 600px; /* Valor máximo para evitar que se haga muy grande en pantallas grandes */
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  }
+
+  /* Botón para cerrar: una X en la esquina superior derecha */
+  .close-flyer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 50px;
+    font-weight: bold;
+    color: #ffffff;
+    cursor: pointer;
+  }
+
+
 /* Contenido del encabezado */
 .header-content2 {
     text-align: center; /* Centra el texto */
@@ -560,6 +599,44 @@ body{
     margin: 10px 0;
 }
 
+
+  /* Overlay general: cubre toda la pantalla con un fondo negro semitransparente */
+  #flyer-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6); /* Fondo negro con 60% de opacidad */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Asegura que esté por encima de todo */
+  }
+
+  /* Contenedor del flyer: ocupa un porcentaje de la pantalla y se posiciona en el centro */
+  .flyer-content {
+    position: relative;
+    width: 70%;       /* Ajusta este porcentaje según el tamaño deseado */
+    max-width: 600px; /* Valor máximo para evitar que se haga muy grande en pantallas grandes */
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  }
+
+  /* Botón para cerrar: una X en la esquina superior derecha */
+  .close-flyer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 50px;
+    font-weight: bold;
+    color: #ffffff;
+    cursor: pointer;
+  }
 
 
 }
